# game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ResourcesManager.cpp  atlas.h  main.cpp  resources_manager.h  test.cpp  util.h
include/: door.h  enemy.h  global.h  player.h  resource.h  timer.h  util.h  废弃player.h
include/collision/: collision_box.h  collision_layer.h  collision_manager.cpp  collision_manager.h
include/common/: animation.h  atlas.h  bullet.h  camera.h  door.h  flashlight.h  floor.h  game_object.h  progress_bar.h  prop_bullet.h  prop_flashlight.h  vector2.h  wall.h
include/scene/: death_scene.h  game_scene.h  introduce_scene.h  menu_scene.h  scene.h  scene_manager.h  setting_scene.h  victory_scene.h
include/utils/: resources_manager.h  scene_manager.h  util.h
include/废弃/: 废弃TimerClock.h
src/: collision_manager.cpp  global.cpp  player.cpp  player_.cpp  resources_manager.cpp  废弃player.cpp
src/废弃/: 废弃player.cpp
